fixing display heights to make up for new wrapping

--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -92,6 +92,7 @@ div .read-more-body {
 			.article {
 				width: 100%;
 				max-width: 225px;
+				min-height: 250px;
 				display: inline-block;
 				text-align: center;
 				div {
